--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="secondary_text">#757575</color>
     <color name="divider_color">#e4e4e4</color>
     <color name="nav_line_color">#FFC107</color>
+    <color name="alert_color">#E91E63</color>
 
     <!--Progress Bar-->
     <color name="pbBackground">#d0ffffff</color>
